Ajout des stats ✅

--- a/MasterMind.vbproj
+++ b/MasterMind.vbproj
@@ -158,5 +158,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="rouage.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
